# kanban-board-be

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: ci.yml
src/: config.rs  lib.rs  main.rs  models.rs  routes.rs  services.rs  utils.rs
src/db/: mongo.rs
src/models/: auth.rs  cards.rs  users.rs
src/routes/: auth.rs  board.rs  column.rs  health.rs
src/services/: auth.rs  board.rs  column.rs  user_info.rs  users.rs
src/utils/: access_manager.rs  errors.rs  jwt.rs
src/utils/macros/: mongo.rs
tests/: auth.rs  board_test.rs
