[package]
name = "kanban_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
bcrypt = "0.17.0"
tower = "0.5.2"
jsonwebtoken = "9.3.1"
mongodb = "3.2.3"
axum = "0.8.4"
tokio = { version = "1.44.2", features = ["full"] }
dotenvy = "0.15.7"
tower-http = { version = "0.6.2", features = ["cors"] }
strum = "0.27.1"
strum_macros = "0.27.1"
futures = "0.3"
chrono = { version = "0.4.41", features = ["clock"] }
http-body-util = "0.1"
async-trait = "0.1.88"

[lib]
path = "src/lib.rs"
